Modification du boutton de reservation dans la section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <main class="main">
         <section>
-
+            <button>
+                
+            </button>
         </section>
     </main>
 
