les éléments restants ont été ajoutés

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <div class="logo">EasyMarket</div>
+            <h1 class="logo">EasyMarket</h1>
             <div class="container">
                 <button class="btn"></button>
                 <ul class="nav-links">
@@ -21,11 +21,22 @@
         </nav>
     </header>
 
+    <p class="paragraphe">Réservez vos produits <br> simplement et facilement </p>
+
     <main class="main">
         <section>
             <button>
-                
+                Réservez un article
             </button>
+
+            <div class="info">
+                <h2>Comment ça marche ? </h2>
+                <ol>
+                    <li>choisissez un produit</li>
+                    <li>Remplissez le formulaire</li>
+                    <li>Le vendeur vous contacte</li>
+                </ol>
+            </div>
         </section>
     </main>
 
