les éléments restants ont été rajoutés

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
             <div class="container">
                 <button class="btn"></button>
                 <ul class="nav-links">
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Tableau de bord</a></li>
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="tableau_de_bord.html">Tableau de bord</a></li>
                 </ul>
             </div>
         </nav>
     </header>
 
+    <h2>Bienvenue !</h2>
     <p class="paragraphe">Réservez vos produits <br> simplement et facilement </p>
 
     <main class="main">
         <section>
-            <button>
-                Réservez un article
+            <button><a href="reservation.html"> Réservez un article</a>
             </button>
 
             <div class="info">
-                <h2>Comment ça marche ? </h2>
+                <h3>Comment ça marche ? </h3>
                 <ol>
                     <li>choisissez un produit</li>
                     <li>Remplissez le formulaire</li>
