break a été ajouté

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">EasyMarket</h1>
+            <h1 class="logo">Easy <br>Market</h1>
             <div class="container">
                 <button class="btn"></button>
                 <ul class="nav-links">
