--- a/tableau_de_bord.html
+++ b/tableau_de_bord.html
@@ -21,7 +21,40 @@
     </header>
     <main>
         <h2>Réservations reçues</h2>
+        <table class="messages-table">
+            <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>Email</th>
+                    <th>Message</th>
+                    <th>Date</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Les messages apparaîtront ici -->
+            </tbody>
+        </table>
     </main>
+
+    <script>
+        // Exemple de messages reçus (à remplacer par vos données réelles)
+        const messages = [
+            { nom: "Jean Dupont", email: "jean@example.com", message: "Bonjour, je souhaite réserver.", date: "2025-07-31" },
+            { nom: "Marie Curie", email: "marie@example.com", message: "Avez-vous des disponibilités ?", date: "2025-07-30" }
+        ];
+
+        const tbody = document.querySelector('.messages-table tbody');
+        messages.forEach(msg => {
+            const tr = document.createElement('tr');
+            tr.innerHTML = `
+                <td>${msg.nom}</td>
+                <td>${msg.email}</td>
+                <td>${msg.message}</td>
+                <td>${msg.date}</td>
+            `;
+            tbody.appendChild(tr);
+        });
+    </script>
 
 </body>
 </html>
