--- a/index.html
+++ b/index.html
@@ -10,33 +10,49 @@
 <body>
     <header class="header">
         <nav class="navbar">
-            <h1 class="logo">Easy <br>Market</h1>
-            <div class="container">
-                <button class="btn"></button>
-                <ul class="nav-links">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="tableau_de_bord.html">Tableau de bord</a></li>
-                </ul>
+            <h1 class="logo">
+                <a href="#">
+                    <span class="logo-easy">EASY</span>
+                    <span class="logo-market">MARKET</span>
+                </a>
+            </h1>
+
+            <div class="menu-toggle-container">
+                <button class="menu-toggle" id="menu-toggle" aria-label="Menu">
+                    <img src="images/menu-hamburger_b.png" alt="Icone de menu" class="menu-icon">
+                </button>
+                <div class="menu-toggle-links">
+                    <a href="index.html" class="toggle-item">Accueil</a>
+                    <a href="tableau_de_bord.html" class="toggle-item">Tableau de bord</a>
+                    <a href="reservation.html">
+                        <button class="btn_reservez">
+                            Réservez un article
+                        </button>
+                    </a>
+                </div>
             </div>
         </nav>
     </header>
 
-    <h2>Bienvenue !</h2>
-    <p class="paragraphe">Réservez vos produits <br> simplement et facilement </p>
-
     <main class="main">
-        <section>
-            <button><a href="reservation.html"> Réservez un article</a>
+        <section class="presentation_&_btn_reservez">
+            <article class="presentation">
+                <h2>EasyMarket</h2>
+                <p class="slogant">Réservez vos produits<br>simplement</p>
+            </article>
+
+            <button class="btn_reservez">
+                <a href="reservation.html">Réservez un article</a>
             </button>
 
-            <div class="info">
+            <article class="info">
                 <h3>Comment ça marche ? </h3>
                 <ol>
                     <li>choisissez un produit</li>
                     <li>Remplissez le formulaire</li>
                     <li>Le vendeur vous contacte</li>
                 </ol>
-            </div>
+            </article>
         </section>
     </main>
 
