--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Easy <br>Market</title>
+    <title>EasyMarket</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -26,7 +26,7 @@
                     <a href="tableau_de_bord.html" class="toggle-item">Tableau de bord</a>
                     <a href="reservation.html">
                         <button class="btn_reservez">
-                            Réservez un article
+                                Réservez un article
                         </button>
                     </a>
                 </div>
@@ -48,9 +48,15 @@
             <article class="info">
                 <h3>Comment ça marche ? </h3>
                 <ol>
-                    <li>choisissez un produit</li>
-                    <li>Remplissez le formulaire</li>
-                    <li>Le vendeur vous contacte</li>
+                    <li>Remplissez quelques informations vous concernant</li>
+                    <li>
+                        Faites une liste des produits/articles que vous voulez réserver
+                        <ul>
+                            <li>Farine - 1 Ekolo</li>
+                            <li>Sucre - 1 Kopos</li>
+                            <li>...</li>
+                    </li>
+                    <li>Cliquez sur le bouton envoyer</li>
                 </ol>
             </article>
         </section>
