Ajout et modifs des fichiers html, css et reservation.js

--- a/index.html
+++ b/index.html
@@ -1,69 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EasyMarket</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>EasyMarket</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/index.css">
+    </head>
 
-<body>
-    <header class="header">
-        <nav class="navbar">
-            <h1 class="logo">
-                <a href="#">
-                    <span class="logo-easy">EASY</span>
-                    <span class="logo-market">MARKET</span>
-                </a>
-            </h1>
-
-            <div class="menu-toggle-container">
-                <button class="menu-toggle" id="menu-toggle" aria-label="Menu">
-                    <img src="images/menu-hamburger_b.png" alt="Icone de menu" class="menu-icon">
-                </button>
-                <div class="menu-toggle-links">
-                    <a href="index.html" class="toggle-item">Accueil</a>
-                    <a href="tableau_de_bord.html" class="toggle-item">Tableau de bord</a>
-                    <a href="reservation.html">
-                        <button class="btn_reservez">
-                                Réservez un article
-                        </button>
+    <body>
+        <header class="header">
+            <nav class="navbar">
+                <h1 class="logo">
+                    <a href="#">
+                        <span class="logo-easy">EASY</span>
+                        <span class="logo-market">MARKET</span>
                     </a>
+                </h1>
+
+                <div class="menu-toggle-container">
+                    <button class="menu-toggle" id="menu-toggle" aria-label="Menu">
+                        <img src="images/menu-hamburger_b.png" alt="Icone de menu" class="menu-icon">
+                    </button>
+                    <div class="menu-toggle-links">
+                        <a href="index.html" class="toggle-item">Accueil</a>
+                        <a href="tableau_de_bord.html" class="toggle-item">Tableau de bord</a>
+
+                        <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
+                            <a href="reservation.html">Réservez un article</a>
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    <main class="main">
-        <section class="presentation_&_btn_reservez">
-            <article class="presentation">
-                <h2>EasyMarket</h2>
-                <p class="slogant">Réservez vos produits<br>simplement</p>
-            </article>
+        <main class="main">
+            <section class="presentation_btn_reservez">
+                <article class="presentation">
+                    <h2>EasyMarket</h2>
+                    <p class="slogant">Réservez vos produits<br>simplement</p>
 
-            <button class="btn_reservez">
-                <a href="reservation.html">Réservez un article</a>
-            </button>
+                    <button class="btn_reservez">
+                        <a href="reservation.html">Réservez un article</a>
+                    </button>
+                </article>
 
-            <article class="info">
-                <h3>Comment ça marche ? </h3>
-                <ol>
-                    <li>Remplissez quelques informations vous concernant</li>
-                    <li>
-                        Faites une liste des produits/articles que vous voulez réserver
-                        <ul>
-                            <li>Farine - 1 Ekolo</li>
-                            <li>Sucre - 1 Kopos</li>
-                            <li>...</li>
-                    </li>
-                    <li>Cliquez sur le bouton envoyer</li>
-                </ol>
-            </article>
-        </section>
-    </main>
+                <article class="info">
+                    <h3>Comment ça marche ? </h3>
+                    <ol>
+                        <li>Remplissez quelques informations vous concernant</li>
+                        <li>
+                            Faites une liste des produits/articles que vous voulez réserver
+                            <ul>
+                                <li>Farine - 1 Ekolo</li>
+                                <li>Sucre - 1 Kopos</li>
+                                <li>...</li>
+                            </ul>
+                        </li>
+                        <li>Cliquez sur le bouton envoyer</li>
+                    </ol>
+                </article>
+            </section>
+        </main>
 
-    <footer class="footer">
-        <p>&copy; 2023 EasyMarket. All rights reserved.</p>
-    </footer>
-</body>
+        <footer class="footer">
+            <p>&copy; 2023 EasyMarket. All rights reserved.</p>
+        </footer>
+    </body>
 </html> 
