--- a/tableau_de_bord.html
+++ b/tableau_de_bord.html
@@ -1,41 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/tableau_de_bord.css">
-</head>
-<body>
-        <header class="header">
-        <nav class="navbar">
-            <h1 class="logo">Easy <br>Market</h1>
-            <div class="container">
-                <button class="btn"></button>
-                <ul class="nav-links">
-                    <li><a href="index.html">Accueil</a></li>
-                    <li><a href="tableau_de_bord.html">Tableau de bord</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <h2>Réservations reçues</h2>
-        <table class="messages-table">
-            <thead>
-                <tr>
-                    <th>Nom</th>
-                    <th>Email</th>
-                    <th>Message</th>
-                    <th>Date</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Les messages apparaîtront ici -->
-            </tbody>
-        </table>
-    </main>
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/tableau_de_bord.css">
+    </head>
 
-    <script src="js/tableau_de_bord.js"></script>
-</body>
+    <body>
+        <header class="header">
+            <nav class="navbar">
+                <h1 class="logo">
+                    <a href="#">
+                        <span class="logo-easy">EASY</span>
+                        <span class="logo-market">MARKET</span>
+                    </a>
+                </h1>
+
+                <div class="menu-toggle-container">
+                    <button class="menu-toggle" id="menu-toggle" aria-label="Menu">
+                        <img src="images/menu-hamburger_b.png" alt="Icone de menu" class="menu-icon">
+                    </button>
+                    <div class="menu-toggle-links">
+                        <a href="index.html" class="toggle-item">Accueil</a>
+                        <a href="tableau_de_bord.html" class="toggle-item">Tableau de bord</a>
+
+                        <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
+                            <a href="reservation.html">Réservez un article</a>
+                        </button>
+                    </div>
+                </div>
+            </nav>
+        </header>
+
+        <main>
+            <h2>Réservations reçues</h2>
+            <table class="messages-table">
+                <thead>
+                    <tr>
+                        <th>Nom</th>
+                        <th>Email</th>
+                        <th>Message</th>
+                        <th>Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Les messages apparaîtront ici -->
+                </tbody>
+            </table>
+        </main>
+
+        <footer class="footer">
+            <p>&copy; 2023 EasyMarket. All rights reserved.</p>
+        </footer>        
+
+        <script src="js/tableau_de_bord.js"></script>
+    </body>
 </html>
