--- a/index.html
+++ b/index.html
@@ -66,5 +66,7 @@
         <footer class="footer">
             <p>&copy; 2023 EasyMarket. All rights reserved.</p>
         </footer>
+        
+        <script src="js/script.js"></script>
     </body>
 </html> 
