--- a/reservation.html
+++ b/reservation.html
@@ -3,10 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>EasyMarket</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/reservation.css">
-        <script src="js/reservation.js"></script>
     </head>
 
     <body>
@@ -62,5 +61,8 @@
         <footer class="footer">
             <p>&copy; 2023 EasyMarket. All rights reserved.</p>
         </footer>
+
+        <script src="js/script.js"></script>
+        <script src="js/reservation.js"></script>
     </body>
 </html>
