--- a/tableau_de_bord.html
+++ b/tableau_de_bord.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>EasyMarket</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/tableau_de_bord.css">
     </head>
@@ -55,6 +55,7 @@
             <p>&copy; 2023 EasyMarket. All rights reserved.</p>
         </footer>        
 
+        <script src="js/script.js"></script>
         <script src="js/tableau_de_bord.js"></script>
     </body>
 </html>
