--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
         <header class="header">
             <nav class="navbar">
                 <h1 class="logo">
-                    <a href="#">
-                        <span class="logo-easy">EASY</span>
-                        <span class="logo-market">MARKET</span>
+                    <a href="index.html">
+                        <img src="images/logo_b.png" alt="Logo EasyMarket" class="img_logo">
                     </a>
                 </h1>
 
@@ -28,6 +27,10 @@
 
                         <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
                             <a href="reservation.html">Réservez un article</a>
+                        </button>
+
+                        <button class="btn_connexion" id="btn_connexion">
+                            <a href="connexion.html" class="connexion">Connexion</a>
                         </button>
                     </div>
                 </div>
@@ -57,6 +60,7 @@
                                 <li>...</li>
                             </ul>
                         </li>
+                        <li>Séléctionez la boutique ciblée</li>
                         <li>Cliquez sur le bouton envoyer</li>
                     </ol>
                 </article>
