Modification des pages réservation et tableau de bord

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </button>
                     <div class="menu-toggle-links">
                         <a href="index.html" class="toggle-item">Accueil</a>
-                        <a href="tableau_de_bord.html" class="toggle-item">Tableau de bord</a>
+                        <a href="tableau_de_bord.html" class="toggle-item barre_separatrice">Tableau de bord</a>
 
                         <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
                             <a href="reservation.html">Réservez un article</a>
@@ -53,7 +53,7 @@
                     <ol>
                         <li>Remplissez quelques informations vous concernant</li>
                         <li>
-                            Faites une liste des produits/articles que vous voulez réserver
+                            Faites une liste des produits/articles que vous voulez réserver et la quantité voulue
                             <ul>
                                 <li>Farine - 1 Ekolo</li>
                                 <li>Sucre - 1 Kopos</li>
