--- a/tableau_de_bord.html
+++ b/tableau_de_bord.html
@@ -12,9 +12,8 @@
         <header class="header">
             <nav class="navbar">
                 <h1 class="logo">
-                    <a href="#">
-                        <span class="logo-easy">EASY</span>
-                        <span class="logo-market">MARKET</span>
+                    <a href="index.html">
+                        <img src="images/logo_b.png" alt="Logo EasyMarket" class="img_logo">
                     </a>
                 </h1>
 
@@ -24,10 +23,14 @@
                     </button>
                     <div class="menu-toggle-links">
                         <a href="index.html" class="toggle-item">Accueil</a>
-                        <a href="tableau_de_bord.html" class="toggle-item">Tableau de bord</a>
+                        <a href="tableau_de_bord.html" class="toggle-item barre_separatrice">Tableau de bord</a>
 
                         <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
                             <a href="reservation.html">Réservez un article</a>
+                        </button>
+
+                        <button class="btn_connexion" id="btn_connexion">
+                            <a href="connexion.html" class="connexion">Connexion</a>
                         </button>
                     </div>
                 </div>
@@ -35,8 +38,13 @@
         </header>
 
         <main>
-            <h2>Réservations reçues</h2>
-            <table class="messages-table">
+            <section class="titre">
+                <h2>Tableau de bord</h2>
+            </section>
+
+            
+
+            <!-- <table class="messages-table">
                 <thead>
                     <tr>
                         <th>Nom</th>
@@ -48,7 +56,7 @@
                 <tbody>
                     <!-- Les messages apparaîtront ici -->
                 </tbody>
-            </table>
+            </table> -->
         </main>
 
         <footer class="footer">
