--- a/reservation.html
+++ b/reservation.html
@@ -70,35 +70,26 @@
                     <input type="submit" value="Envoyer" class="btn_submit">
                 </form> 
             </section>
-
-            <!-- <form action="post" method="get">
-                <h2>Réservation d'article</h2>
-                <label for="nom">Nom complet:</label>
-                <input type="text" id="nom" name="name" required>
-
-                <label for="numero">Numéro whatsapp:</label>
-                <input type="tel" id="numero" name="phone" required>
-
-                <label for="produit">Produit à réserver:</label>
-                <input type="text" id="produit" name="produit" required>
-
-                <label for="quantité">Quantité demandée:</label>
-                <textarea type="text" id="quantite" name="quantite" required></textarea>
-                
-                <label for="date">Date de retrait:</label>
-                <textarea type="date" id="date" name="date" required></textarea>
-
-                <label for="message">Remarques:</label>
-                <textarea id="message" name="message" ></textarea>
-                <button type="submit">Envoyer la réservation</button>
-            </form> -->
         </main>   
 
         <footer class="footer">
             <p>&copy; 2023 EasyMarket. All rights reserved.</p>
         </footer>
-
+        
         <script src="js/script.js"></script>
         <script src="js/reservation.js"></script>
+        <script>
+        // Ajout dynamique d'un groupe article/quantité
+        document.getElementById('ajouter_produit').addEventListener('click', function() {
+            const container = document.getElementById('articles-container');
+            const group = document.createElement('div');
+            group.className = 'article-group';
+            group.innerHTML = `
+                <input type="text" name="article[]" placeholder="Produit/Article">
+                <input type="text" name="quantite[]" placeholder="Quantité">
+            `;
+            container.appendChild(group);
+        });
+        </script>
     </body>
 </html>
