Ajout des tableaux dans tableau de bord

--- a/tableau_de_bord.html
+++ b/tableau_de_bord.html
@@ -41,6 +41,37 @@
             <section class="titre">
                 <h2>Tableau de bord</h2>
             </section>
+
+            <section class="suivi_reservation">
+                <article class="reserved_items">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>Client</th>
+                                <th>Article/Produit</th>
+                                <th>Prix Total</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </article>
+
+                <article class="history_reservation">
+
+                </article>
+            </section>
+
+            <section class="suivi_commission">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Client</th>
+                            <th>Prix Total</th>
+                            <th>Commission</th>
+                        </tr>
+                    </thead>
+                </table>
+            </section>
         </main>
 
         <footer class="footer">
