Modif tableau de bord

--- a/tableau_de_bord.html
+++ b/tableau_de_bord.html
@@ -45,6 +45,7 @@
             <section class="suivi_reservation">
                 <article class="reserved_items">
                     <table>
+                        <caption>Réservations du jour/Date</caption>
                         <thead>
                             <tr>
                                 <th>Client</th>
@@ -63,6 +64,7 @@
 
             <section class="suivi_commission">
                 <table>
+                    <caption>Commissions</caption>
                     <thead>
                         <tr>
                             <th>Client</th>
