--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="tableau_de_bord.html" class="toggle-item barre_separatrice">Tableau de bord</a>
 
                         <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
-                            <a href="reservation.html">Réservez un article</a>
+                            <a href="reservation.html">Réservez un produit</a>
                         </button>
 
                         <button class="btn_connexion" id="btn_connexion">
@@ -44,7 +44,7 @@
                     <p class="slogant">Réservez vos produits<br>simplement</p>
 
                     <button class="btn_reservez">
-                        <a href="reservation.html">Réservez un article</a>
+                        <a href="reservation.html">Réservez un produit</a>
                     </button>
                 </article>
 
@@ -53,7 +53,7 @@
                     <ol>
                         <li>Remplissez quelques informations vous concernant</li>
                         <li>
-                            Faites une liste des produits/articles que vous voulez réserver et la quantité voulue
+                            Faites une liste des produits que vous voulez réserver et la quantité voulue
                             <ul>
                                 <li>Farine - 1 Ekolo</li>
                                 <li>Sucre - 1 Kopos</li>
