Modification des fichiers connexion du vendeur

--- a/creation_du_compte.html
+++ b/creation_du_compte.html
@@ -38,7 +38,17 @@
         </header>
 
         <main class="main">
-            <section>
+            <section class="creation_du_compte_section">
+                <h3>Créer un compte</h3>
+                <form method="post" action="" class="creation_du_compte_form">
+                    <input type="text" name="nom" id="nom" placeholder="Nom" required>
+                    <input type="text" name="prenom" id="prenom" placeholder="Prénom" required>
+                    <input type="tel/email" name="tel_email" id="tel_email" placeholder="Numéro mobile ou Email" required>
+                    <input type="password" name="password" id="password" placeholder="Mot de passe" required>
+                    <button type="submit" class="btn_creation_compte_submit">Créer un compte</button>
+                    
+                    <a href="connexion.html" class="deja_inscrit">Déjà inscrit ? Connectez-vous</a>
+                </form>
                 
             </section>
         </main>
