--- a/mot_de_passe_oublie.html
+++ b/mot_de_passe_oublie.html
@@ -43,7 +43,9 @@
                 <form method="post" action="" class="mot_de_passe_oublie_form">
                     <input type="tel/email" name="tel_email" id="tel_email" placeholder="Numéro mobile ou Email" required>
                     <input type="number" name="code_verification" id="code_verification" placeholder="Code de vérification" required>
-                    <button type="submit" class="btn_envoyer">Envoyer</button>
+                    <button type="submit" class="btn_envoyer">
+                        <a href="changer_mot_de_passe.html">Envoyer</a>
+                    </button>
                 </form>
             </section>
         </main>
