--- a/connexion.html
+++ b/connexion.html
@@ -6,6 +6,7 @@
         <title>EasyMarket</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/connexion.css">
+        <link rel="stylesheet" href="css/form.css">
     </head>
 
     <body>
@@ -25,13 +26,17 @@
                         <a href="index.html" class="toggle-item">Accueil</a>
                         <a href="tableau_de_bord.html" class="toggle-item barre_separatrice">Tableau de bord</a>
 
-                        <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
-                            <a href="reservation.html">Réservez un produit</a>
-                        </button>
+                        <a href="reservation.html" class="reservation">
+                            <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
+                                Réservez un produit
+                            </button>
+                        </a>
 
-                        <button class="btn_connexion" id="btn_connexion">
-                            <a href="connexion.html" class="connexion">Connexion</a>
-                        </button>
+                        <a href="connexion.html" class="connexion">
+                            <button class="btn_connexion" id="btn_connexion">
+                                Connexion
+                            </button>
+                        </a>
                     </div>
                 </div>
             </nav>
