--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
                         <a href="index.html" class="toggle-item">Accueil</a>
                         <a href="tableau_de_bord.html" class="toggle-item barre_separatrice">Tableau de bord</a>
 
-                        <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
-                            <a href="reservation.html">Réservez un produit</a>
-                        </button>
+                        <a href="reservation.html" class="reservation">
+                            <button class="btn_reservez menu-toggle_btn_reservez" id="btn_reservez">
+                                Réservez un produit
+                            </button>
+                        </a>
 
-                        <button class="btn_connexion" id="btn_connexion">
-                            <a href="connexion.html" class="connexion">Connexion</a>
-                        </button>
+                        <a href="connexion.html" class="connexion">
+                            <button class="btn_connexion" id="btn_connexion">
+                                Connexion
+                            </button>
+                        </a>
                     </div>
                 </div>
             </nav>
@@ -43,9 +47,11 @@
                     <h2>EasyMarket</h2>
                     <p class="slogant">Réservez vos produits<br>simplement</p>
 
-                    <button class="btn_reservez">
-                        <a href="reservation.html">Réservez un produit</a>
-                    </button>
+                    <a href="reservation.html">
+                        <button class="btn_reservez">
+                            Réservez un produit
+                        </button>
+                    </a>
                 </article>
 
                 <article class="info">
@@ -55,8 +61,8 @@
                         <li>
                             Faites une liste des produits que vous voulez réserver et la quantité voulue
                             <ul>
-                                <li>Farine - 1 Ekolo</li>
-                                <li>Sucre - 1 Kopos</li>
+                                <li>Farine / 1 Ekolo</li>
+                                <li>Sucre / 1 Kopos</li>
                                 <li>...</li>
                             </ul>
                         </li>
